// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MethodsRenderer should render a table 1`] = `
<Consumer(Table)
  columns={
    Array [
      Object {
        "caption": "Method name",
        "render": [Function],
      },
      Object {
        "caption": "Parameters",
        "render": [Function],
      },
      Object {
        "caption": "Description",
        "render": [Function],
      },
    ]
  }
  getRowKey={[Function]}
  rows={
    Array [
      Object {
        "description": "Public",
        "modifiers": Array [],
        "name": "method",
        "params": Array [],
      },
    ]
  }
/>
`;

exports[`PropsRenderer should render JsDoc tags 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Consumer(Name)
        deprecated={false}
      >
        Foo()
      </Consumer(Name)>
    </div>
    <div
      key="1"
    >
      <Consumer(Arguments)
        args={Array []}
      />
    </div>
    <div
      key="2"
    >
      <div>
        <JsDoc
          since={
            Array [
              Object {
                "description": "1.0.0",
                "title": "since",
              },
            ]
          }
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render deprecated JsDoc tags 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Consumer(Name)
        deprecated={true}
      >
        Foo()
      </Consumer(Name)>
    </div>
    <div
      key="1"
    >
      <Consumer(Arguments)
        args={Array []}
      />
    </div>
    <div
      key="2"
    >
      <div>
        <JsDoc
          deprecated={
            Array [
              Object {
                "description": "Use *another* method",
                "title": "description",
              },
            ]
          }
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render parameters 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Consumer(Name)
        deprecated={false}
      >
        method()
      </Consumer(Name)>
    </div>
    <div
      key="1"
    >
      <Consumer(Arguments)
        args={
          Array [
            Object {
              "description": "Description",
              "name": "value",
              "optional": undefined,
              "type": Object {
                "name": "Number",
              },
            },
          ]
        }
      />
    </div>
    <div
      key="2"
    >
      <div>
        <Markdown
          text="Public"
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render public method 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Consumer(Name)
        deprecated={false}
      >
        method()
      </Consumer(Name)>
    </div>
    <div
      key="1"
    >
      <Consumer(Arguments)
        args={Array []}
      />
    </div>
    <div
      key="2"
    >
      <div>
        <Markdown
          text="Public"
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render returns 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Consumer(Name)
        deprecated={false}
      >
        method()
      </Consumer(Name)>
    </div>
    <div
      key="1"
    >
      <Consumer(Arguments)
        args={Array []}
      />
    </div>
    <div
      key="2"
    >
      <div>
        <Consumer(Argument)
          block={true}
          description="Description"
          returns={true}
          type={
            Object {
              "name": "Number",
            }
          }
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;
